# dio-dp100-azure-foundry-challenge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: streamlit_app.py
core/: __init__.py  cache.py  config.py
core/clients/: __init__.py  openai_client.py  search_client.py
models/: __init__.py  schemas.py
scripts/: create_index.py
services/: __init__.py  chat_service.py  indexer_service.py  ingestion_service.py  retrieval_service.py
tests/: test_chat.py  test_ingestion.py  test_openai_client.py  test_retrieval.py
